examples/kubernetes/traefik/traefik-ds.yaml
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
      name: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60   #优雅终止宽限期60s
      containers:
        - image: traefik:v2.2.8
          name: traefik-ingress-lb
          ports:
            - name: http
              containerPort: 80
              hostPort: 80
            - name: traefik
              containerPort: 8080
              hostPort: 8080
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          args:
            - --api
            - --api.insecure=true
            - --metrics.prometheus=true
#            - --metrics.prometheus.entryPoint=web
            - --global.checknewversion=true
            - --entryPoints.traefik.address=:8080
            - --entryPoints.web.address=:80
            - --providers.kubernetescrd=true
            - --providers.kubernetesingress=true
            - --ping=true
#            - --ping.entryPoint=web
            - --log.level=INFO
            - --accesslog=true
            - --accesslog.format=json
            - --accesslog.fields.defaultmode=keep
            - --accesslog.fields.names.ClientUsername=drop
            - --accesslog.fields.headers.defaultmode=keep
            - --accesslog.fields.headers.names.User-Agent=keep
            - --accesslog.fields.headers.names.Authorization=keep
            - --accesslog.fields.headers.names.Content-Type=keep
#---
#kind: Service
#apiVersion: v1
#metadata:
#  name: traefik-ingress-service
#  namespace: kube-system
#spec:
#  selector:
#    k8s-app: traefik-ingress-lb
#  ports:
#    - protocol: TCP
#      port: 80
#      name: web
#    - protocol: TCP
#      port: 8080
#      name: traefik
#  type: NodePort
