examples/kubernetes/traefik/cheese-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cheese
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/app-root: "/index.html1"
spec:
  rules:
  - host: stilton.gkid.com
    http:
      paths:
      - path: /
        backend:
          serviceName: stilton
          servicePort: http
  - host: cheddar.gkid.com
    http:
      paths:
      - path: /
        backend:
          serviceName: cheddar
          servicePort: http
  - host: wensleydale.gkid.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wensleydale
          servicePort: http
